chore: align logic in decodeCustomMetadata